--- a/market/build.gradle
+++ b/market/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
-
+    buildToolsVersion '23.0.2'
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.gaojun.appmarket"
         minSdkVersion 15
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.jiechic.library:xUtils:2.6.14'
 }
+
