--- a/market/src/main/AndroidManifest.xml
+++ b/market/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gaojun.appmarket">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".global.MarketApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.BaseActivity"></activity>
+        <activity android:name=".ui.activities.BaseActivity" />
+        <activity android:name=".ui.activities.HomeDetailActivity"></activity>
     </application>
 
 </manifest>
