--- a/market/build.gradle
+++ b/market/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion '24.0.0'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.gaojun.appmarket"
@@ -24,5 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jiechic.library:xUtils:2.6.14'
+    compile 'com.android.support:design:24.0.0'
 }
 
