应用详情业增加ToolBar

--- a/market/src/main/AndroidManifest.xml
+++ b/market/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activities.BaseActivity" />
-        <activity android:name=".ui.activities.HomeDetailActivity"></activity>
+        <activity android:name=".ui.activities.HomeDetailActivity"/>
     </application>
 
 </manifest>
